force-app/main/default/objects/Course_Information__c/Course_Information__c.object-meta.xml
<CustomObject>
    <label>Course Information</label>
    <nameField>
        <label>Course Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>