force-app/main/default/objects/Course_Information__c/fields/Deactivate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deactivate_Reason__c</fullName>
    <label>Deactivate Reason</label>
    <type>TextArea</type>
</CustomField>