force-app/main/default/objects/Course_Information__c/fields/Duration_In_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Weeks__c</fullName>
    <label>Duration(In Weeks)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>