force-app/main/default/objects/Course_Information__c/validationRules/Deactivate_dependency.validationRule-meta.xml
<ValidationRule>
    <fullName>Deactivate_dependency</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( Deactivate_Reason__c ), Active__c = FALSE)</errorConditionFormula>
    <errorDisplayField>Deactivate_Reason__c</errorDisplayField>
    <errorMessage>Please mention deactivate reason</errorMessage>
</ValidationRule>